[package]
name = "luminance-glfw"
version = "0.1.3"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "GLFW support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glfw"]

homepage = "https://github.com/phaazon/luminance-glfw"
repository = "https://github.com/phaazon/luminance-glfw"
documentation = "https://docs.rs/luminance-glfw"

[dependencies]
gl = "0.6"
glfw = "0.14"
luminance = "0.20"
